Fix description alignment

--- a/src/scss/japan.scss
+++ b/src/scss/japan.scss
@@ -19,9 +19,6 @@
   .japan-table {
     align-items: stretch;
   }
-  .descr-wrapper {
-    align-items: center;
-  }
   .buy-prices,
   .sell-prices,
   .barriers {
@@ -40,9 +37,6 @@
   }
   .price-wrapper {
     padding-right: 20px;
-  }
-  .descr-wrapper {
-    flex-grow: 2;
   }
   .price-button {
     width: 120px;
@@ -84,8 +78,9 @@
     font-weight: bold;
   }
   .descr-wrapper {
+    margin-top: 20px;
     .descr {
-      padding: 10px;
+      padding: 0 10px 10px;
       font-size: 16px;
       max-width: 370px;
     }
